force-app/main/default/objects/Trolley_Invoice_Line_Item__c/Trolley_Invoice_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Trolley Invoice Line Item</label>
    <nameField>
        <displayFormat>TP-{0000000}</displayFormat>
        <label>Trolley Payment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trolley Invoice Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>