force-app/main/default/objects/Trolley_Invoice_Line_Item__c/fields/QB_Bill_Line_Id__c.field-meta.xml
<CustomField>
    <fullName>QB_Bill_Line_Id__c</fullName>
    <label>QB Bill Line Id</label>
    <length>5</length>
    <type>Text</type>
</CustomField>