force-app/main/default/objects/Trolley_Invoice_Line_Item__c/fields/QB_Vendor_ID__c.field-meta.xml
<CustomField>
    <fullName>QB_Vendor_ID__c</fullName>
    <formula>Torc_User__r.Quick_Books_vendor_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QB Vendor ID</label>
    <type>Text</type>
</CustomField>