force-app/main/default/objects/Trolley_Invoice_Line_Item__c/fields/Quickbooks_payment_Json__c.field-meta.xml
<CustomField>
    <fullName>Quickbooks_payment_Json__c</fullName>
    <label>Quickbooks payment Json</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>