force-app/main/default/objects/Trolley_Invoice_Line_Item__c/fields/torc_user_email__c.field-meta.xml
<CustomField>
    <fullName>torc_user_email__c</fullName>
    <formula>Torc_User__r.Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>torc user email</label>
    <type>Text</type>
</CustomField>