force-app/main/default/objects/Trolley_Invoice_Line_Item__c/fields/Trolley_Batch__c.field-meta.xml
<CustomField>
    <fullName>Trolley_Batch__c</fullName>
    <label>Trolley Batch</label>
    <referenceTo>Trolley_Batch__c</referenceTo>
    <relationshipName>Trolley_Payments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>