force-app/main/default/objects/Trolley_Invoice_Line_Item__c/fields/Trolley_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Trolley_Invoice__c</fullName>
    <label>Trolley Invoice</label>
    <referenceTo>Trolley_Invoice__c</referenceTo>
    <relationshipLabel>Trolley Invoice Line Items</relationshipLabel>
    <relationshipName>Trolley_Invoice_Line_Items</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>