force-app/main/default/objects/Trolley_Invoice_Line_Item__c/fields/Trolley_Recipient__c.field-meta.xml
<CustomField>
    <fullName>Trolley_Recipient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trolley Recipient</label>
    <referenceTo>Trolley_Recipient__c</referenceTo>
    <relationshipName>Trolley_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>